# LMS_R

./: .gitignore  LICENSE  Laporan Perkembangan Proyek Sains Data Tahap 1.docx  README.md  eslint.config.mjs  fix-imports.js  lms_db.sql  package-lock.json  package.json
backend_rs/: Cargo.toml
backend_rs/src/: app_state.rs  config.rs  db.rs  error.rs  main.rs
backend_rs/src/handlers/: admin.rs  assignment.rs  attendance.rs  auth.rs  course.rs  grade.rs  quiz.rs  teacher.rs
backend_rs/src/middleware/: auth.rs
backend_rs/src/models/: assignment.rs  course.rs  mod.rs  quiz.rs  student.rs  user.rs
backend_rs/src/routes/: admin.rs  assignment.rs  attendance.rs  auth.rs  course.rs  grade.rs  mod.rs  quiz.rs  teacher.rs
scripts/: test-login.js
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: layout.tsx
src/app/admin-sekolah/: layout.tsx
src/app/attendance/: layout.tsx  page.tsx
src/app/components/: Dashboard.tsx  MainLayout.tsx  Quiz.tsx  QuizResults.tsx  TryoutResults.tsx  sidebar.tsx
src/app/constants/: dashboard.ts  jadwal.ts  quizdata.ts  scores.ts  tryoutdata.ts  tugas.ts
src/app/context/: AppProviders.tsx  AttendanceContext.tsx  AttendanceDataContext.tsx  LocationContext.tsx  NotificationContext.tsx
src/app/dashboard/: layout.tsx
src/app/forum/: layout.tsx  page.tsx
src/app/hooks/: useAttendanceIntegration.ts  useAttendanceMutations.ts  useAttendanceRecords.ts  useGeoLocation.ts  useQRScanner.ts
src/app/jadwal/: layout.tsx  page.tsx
src/app/kepala/: layout.tsx
src/lib/: apiClient.ts
(+174 files in other folders)
